--- a/aaMMSB/src/Makefile
+++ b/aaMMSB/src/Makefile
@@ -180,7 +180,7 @@ svinet_SOURCES = mmsbinfer.hh mmsbinfer.cc\
 all: all-am
 
 .SUFFIXES:
-.SUFFIXES: .cc .o .obj
+.SUFFIXES: .cpp .cc .o .obj
 $(srcdir)/Makefile.in:  $(srcdir)/Makefile.am  $(am__configure_deps)
 	@for dep in $?; do \
 	  case '$(am__configure_deps)' in \
