should compile now

--- a/aaMMSB/src/Makefile
+++ b/aaMMSB/src/Makefile
@@ -45,7 +45,8 @@ CONFIG_CLEAN_VPATH_FILES =
 am__installdirs = "$(DESTDIR)$(bindir)"
 PROGRAMS = $(bin_PROGRAMS)
 am_svinet_OBJECTS = mmsbinfer.$(OBJEXT) linksampling.$(OBJEXT) \
-		    optimization.$(OBJEXT)\
+		    Testing/optimization.$(OBJEXT)\
+		    Testing/ap.cpp Testing/alglibinternal.cpp Testing/alglibmisc.cpp Testing/linalg.cpp Testing/solvers.cpp\
 	log.$(OBJEXT) network.$(OBJEXT) thread.$(OBJEXT) \
 	mmsbinferorig.$(OBJEXT) fastamm.$(OBJEXT) sbm.$(OBJEXT) \
 	fastamm2.$(OBJEXT) mmsbgen.$(OBJEXT) mmsborig.$(OBJEXT) \
@@ -163,7 +164,8 @@ top_builddir = ..
 top_srcdir = ..
 svinet_SOURCES = mmsbinfer.hh mmsbinfer.cc\
 	linksampling.hh	linksampling.cc\
-	optimization.h	optimization.cpp\
+	Testing/optimization.h	Testing/optimization.cpp\
+	Testing/ap.cpp Testing/alglibinternal.cpp Testing/alglibmisc.cpp Testing/linalg.cpp Testing/solvers.cpp\
 	matrix.hh env.hh log.cc log.hh\
 	network.cc network.hh\
 	thread.hh thread.cc\
