--- a/aaMMSB/Makefile
+++ b/aaMMSB/Makefile
@@ -102,12 +102,12 @@ distuninstallcheck_listfiles = find . -type f -print
 am__distuninstallcheck_listfiles = $(distuninstallcheck_listfiles) \
   | sed 's|^\./|$(prefix)/|' | grep -v '$(infodir)/dir$$'
 distcleancheck_listfiles = find . -type f -print
-ACLOCAL = ${SHELL} /Users/jing/Dropbox/scripts/networkCommunityDetection/aaMMSB/missing --run aclocal-1.11
+ACLOCAL = ${SHELL} /Users/serena/Desktop/research2016/our_code/networkCommunityDetection/aaMMSB/missing --run aclocal-1.11
 AMTAR = $${TAR-tar}
-AUTOCONF = ${SHELL} /Users/jing/Dropbox/scripts/networkCommunityDetection/aaMMSB/missing --run autoconf
-AUTOHEADER = ${SHELL} /Users/jing/Dropbox/scripts/networkCommunityDetection/aaMMSB/missing --run autoheader
-AUTOMAKE = ${SHELL} /Users/jing/Dropbox/scripts/networkCommunityDetection/aaMMSB/missing --run automake-1.11
-AWK = awk
+AUTOCONF = ${SHELL} /Users/serena/Desktop/research2016/our_code/networkCommunityDetection/aaMMSB/missing --run autoconf
+AUTOHEADER = ${SHELL} /Users/serena/Desktop/research2016/our_code/networkCommunityDetection/aaMMSB/missing --run autoheader
+AUTOMAKE = ${SHELL} /Users/serena/Desktop/research2016/our_code/networkCommunityDetection/aaMMSB/missing --run automake-1.11
+AWK = gawk
 CC = gcc
 CCDEPMODE = depmode=gcc3
 CFLAGS = -g -O2
@@ -122,9 +122,9 @@ DEPDIR = .deps
 ECHO_C = \c
 ECHO_N = 
 ECHO_T = 
-EGREP = /usr/bin/grep -E
+EGREP = /opt/local/bin/grep -E
 EXEEXT = 
-GREP = /usr/bin/grep
+GREP = /opt/local/bin/grep
 INSTALL = /usr/bin/install -c
 INSTALL_DATA = ${INSTALL} -m 644
 INSTALL_PROGRAM = ${INSTALL}
@@ -134,7 +134,7 @@ LDFLAGS =
 LIBOBJS = 
 LIBS = -lgsl -lpthread -lgslcblas 
 LTLIBOBJS = 
-MAKEINFO = ${SHELL} /Users/jing/Dropbox/scripts/networkCommunityDetection/aaMMSB/missing --run makeinfo
+MAKEINFO = ${SHELL} /Users/serena/Desktop/research2016/our_code/networkCommunityDetection/aaMMSB/missing --run makeinfo
 MKDIR_P = ./install-sh -c -d
 OBJEXT = o
 PACKAGE = svinet
@@ -150,10 +150,10 @@ SET_MAKE =
 SHELL = /bin/sh
 STRIP = 
 VERSION = 0.9
-abs_builddir = /Users/jing/Dropbox/scripts/networkCommunityDetection/aaMMSB
-abs_srcdir = /Users/jing/Dropbox/scripts/networkCommunityDetection/aaMMSB
-abs_top_builddir = /Users/jing/Dropbox/scripts/networkCommunityDetection/aaMMSB
-abs_top_srcdir = /Users/jing/Dropbox/scripts/networkCommunityDetection/aaMMSB
+abs_builddir = /Users/serena/Desktop/research2016/our_code/networkCommunityDetection/aaMMSB
+abs_srcdir = /Users/serena/Desktop/research2016/our_code/networkCommunityDetection/aaMMSB
+abs_top_builddir = /Users/serena/Desktop/research2016/our_code/networkCommunityDetection/aaMMSB
+abs_top_srcdir = /Users/serena/Desktop/research2016/our_code/networkCommunityDetection/aaMMSB
 ac_ct_CC = gcc
 ac_ct_CXX = g++
 am__include = include
@@ -173,7 +173,7 @@ host_alias =
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /Users/jing/Dropbox/scripts/networkCommunityDetection/aaMMSB/install-sh
+install_sh = ${SHELL} /Users/serena/Desktop/research2016/our_code/networkCommunityDetection/aaMMSB/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
